--- a/Perlin Noise Wave/index.html
+++ b/Perlin Noise Wave/index.html
@@ -6,6 +6,7 @@
     <title>Perlin Wave Noise</title>
     <style> body {padding: 0; margin: 0;} </style>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+	<script language="javascript" type="text/javascript" src="p5.dom.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
