--- a/gktd22-noise-turbulance/index.html
+++ b/gktd22-noise-turbulance/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en_GB">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<title>Noise Turbulance</title>
@@ -15,17 +15,20 @@
 			<tr>
 				<td><button type="button" id="clear">Clear</button></td>
 				<td><button type="button" id="reset">Reset values</button></td>
+				<td></td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>Number of Particles per frame: <input type="number" min="0" max="10000000" step="1" value="10" id="numParticlesPerFrame"></input></td>
-				<td>Particle life span (in frames): <input type="number" min="0" max="10000000" step="1" value="90" id="particleLifeSpan"></input></td>
-				<td>Particle decay (velocity scalar per frame): <input type="number" min="0" max="1" step="0.01" value="0.75" id="particleDecay"></input></td>
+				<td>Number of Particles per frame: <input type="number" min="0" max="10000000" step="1" value="10" id="numParticlesPerFrame" /></td>
+				<td>Particle life span (in frames): <input type="number" min="0" max="10000000" step="1" value="90" id="particleLifeSpan" /></td>
+				<td>Particle decay (velocity scalar per frame): <input type="number" min="0" max="1" step="0.01" value="0.75" id="particleDecay" /></td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>Particle size scalar: <input type="number" min="0.01" max="100" step="0.01" value="1" id="particleSizeScalar"></input></td>
-				<td>Particle velocity scalar: <input type="number" min="0.01" max="100" step="0.01" value="1" id="particleVelScalar"></input></td>
-				<td>Particle minimum size ratio: <input type="number" min="0" max="1" step="0.001" value="0.05" id="particleMinSizeRatio"></input></td>
-				<td>Particle maximum size ratio: <input type="number" min="0" max="1" step="0.001" value="0.05" id="particleMaxSizeRatio"></input></td>
+				<td>Particle size scalar: <input type="number" min="0.01" max="100" step="0.01" value="1" id="particleSizeScalar" /></td>
+				<td>Particle velocity scalar: <input type="number" min="0.01" max="100" step="0.01" value="1" id="particleVelScalar" /></td>
+				<td>Particle minimum size ratio: <input type="number" min="0" max="1" step="0.001" value="0.05" id="particleMinSizeRatio" /></td>
+				<td>Particle maximum size ratio: <input type="number" min="0" max="1" step="0.001" value="0.05" id="particleMaxSizeRatio" /></td>
 			</tr>
 		</table>
 		<table id="hueTable"></table>
