--- a/GraphPlotter/Example.html
+++ b/GraphPlotter/Example.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>Graph Plotter Example</title>
@@ -29,10 +29,10 @@
 					<h3><u>Plot Equation</u></h3>
 				</div>
 
-				<ul class="list-unstyled components text-center">
-					<div class="form-inline">
+				<div class="list-unstyled components text-center">
+					<div class="form-inline spacer">
 					    <label>y =</label>
-						<input type="equation" class="form-control" id="equation_input" placeholder="6x + 2">
+						<input class="form-control" id="equation_input" placeholder="6x + 2">
 					</div>
 
 					<br>
@@ -78,7 +78,7 @@
 					<label>random()</label>
 					<br>
 					<label>Most trig functions</label>
-				</ul>
+				</div>
 			</nav>
 
 			<!-- Page Content  -->
@@ -93,7 +93,7 @@
 		<!-- Bootstrap JS -->
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-		<script type="text/javascript">
+		<script>
 			$("#equation_input").on("keyup", function(event) {
 				const equation_string = $("#equation_input").val()
 				if (equation_string !== undefined) {
