Split wave class into separate file and added more interaction

--- a/Perlin Noise Wave/index.html
+++ b/Perlin Noise Wave/index.html
@@ -8,6 +8,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
 	<script language="javascript" type="text/javascript" src="p5.dom.js"></script>
     <script src="sketch.js"></script>
+	<script src="wave.js"></script>
   </head>
   <body>
   </body>
