Added README documentation

--- a/Perlin Noise Wave/index.html
+++ b/Perlin Noise Wave/index.html
@@ -16,7 +16,7 @@
   <script src="wave.js"></script>  
   <h1><center>Perlin Noise Wave</center></h1>
   
-  Background Colour: <input type="text" id="myText" value="White">
+  Background Colour: <input type="text" id="colour" value="White">
 	<p>Enter a background colour and press the button to change it</p>
   <button onclick="changeColour()">Change</button>
 
