Made sun into separate class and .js file

--- a/Perlin Noise Wave/index.html
+++ b/Perlin Noise Wave/index.html
@@ -13,7 +13,8 @@
 <body>  
 
   <script src="sketch.js"></script>
-  <script src="wave.js"></script>  
+  <script src="wave.js"></script> 
+  <script src="sun.js"></script> 
   <h1><center>Perlin Noise Wave</center></h1>
   
   Background Colour: <input type="text" id="colour" value="White">
