Moved draw function into classes individually

--- a/Perlin Noise Wave/index.html
+++ b/Perlin Noise Wave/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE html><html>
 <head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
@@ -11,7 +9,7 @@
 </head>
 
 <body>  
-
+  <script src="Control.js"></script>
   <script src="sketch.js"></script>
   <script src="wave.js"></script> 
   <script src="sun.js"></script> 
@@ -21,6 +19,6 @@
 	<p>Enter a background colour and press the button to change it</p>
   <button onclick="changeColour()">Change</button>
 
-</body>
 
-</html>
+
+</body></html>
