--- a/Pond/index.html
+++ b/Pond/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <title>Pond Example</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
         <script src="fish.js"></script>
         <script src="pond.js"></script>
         <script src="example.js"></script>
-        <meta charset="utf-8"></meta>
+        <meta charset="utf-8">
     </head>
     
     <body>
@@ -23,13 +24,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div id="inner">
+                    <div class="inner">
                         <h1>Look at all these fish!</h1>
                         <h2>Aren't they beautiful? Click the arrow to see what we can do with them.</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div id="inner">
+                    <div class="inner">
                         <h1>You can change their colour</h1>
                         <h2>Try it using the controls below</h2>
                         <br>
@@ -40,7 +41,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div id="inner">
+                    <div class="inner">
                         <h1>You can make them bigger or smaller</h1>
                         <h2>Try it using the slider</h2>
                         <br>
@@ -49,7 +50,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div id="inner">
+                    <div class="inner">
                         <h1>You can change their speed</h1>
                         <h2>Try it using the slider (you can even make them go backwards).</h2>
                         <label for="fishSpeed">Speed </label>
@@ -64,7 +65,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div id="inner">
+                    <div class="inner">
                         <h1>And you can add more!</h1>
                         <h2>Use the controls below to add a few custom fish to the pond.</h2>
                         <label for="newFishColour">Colour </label>
