Split up files and switched to iterative solution

--- a/InAndOut/index.html
+++ b/InAndOut/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>In and Out test page</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
     <script src="renderer_wrapper.js"></script>
+    <script src="InAndOut.js"></script>
     <script src="sketch.js"></script>
     <style>
     #left
