Completed README, renamed index to example, minor bug fixes

--- a/Pond/example.html
+++ b/Pond/example.html
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div id="inner">
+                    <div class="inner">
                         <h1>You can get rid of fish</h1>
                         <h2>Click the button below a couple of times to get rid of a few.</h2>
                         <input type="button" value="Trawl" id="fishTrawl">
