--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
     <head>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js" type="text/javascript"></script>
     <script src="line.js" type="text/javascript"></script>
-    <script src="mySketch.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js" type="text/javascript"></script>
+    <script src="mySketch.js" type="text/javascript"></script>
     </head>
 <body>
         <div>
+		<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
                 <p>point_count: <input type="text"  class="point_count" value="0"/>
                     tmp_count: <input type="text"  class="tmp_count" value="0"/>
                     rad: <input type="text"  class="rad" value="0.0"/>
