--- a/Perlin Noise Wave/index.html
+++ b/Perlin Noise Wave/index.html
@@ -33,7 +33,7 @@
       <div class="input-group mb-3">
         <input type="text" class="form-control" id="colour" placeholder="Enter in a colour to change background colour ">
         <div class="input-group-append">
-          <button class="btn btn-success" type="submit" id="bg" onclick="x.setColour()">Change</button>
+          <button class="btn btn-success" type="submit" id="bg" onclick="Wave1.setColour()">Change</button>
         </div>
       </div>
 
@@ -88,7 +88,7 @@
     })
 
     document.getElementById("bg").addEventListener("click", function() {
-      x.setColour();
+      Wave1.setColour();
     })
   </script>
 
