--- a/Magical-Tree/index.html
+++ b/Magical-Tree/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html><head>
-  <!--> sources all files to be used <-->
-  <script src="p5.min.js"></script>
-  <script src="p5.dom.min.js"></script>
-  <script src="p5.sound.min.js"></script>
+  <!-- sources all files to be used -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
   <script src="index.js"></script>
@@ -11,7 +11,7 @@
   <script src="clCreateTree.js"></script>
   <script src="clDrawLeaves.js"></script>
   <script src="clTreeBackground.js"></script>
-  <!--> sets up table to display <-->
+  <!-- sets up table to display -->
   <style>
     table,
     th,
@@ -19,7 +19,7 @@
       border-collapse: collapse;
     }
   </style>
-  <!--> css style for sliders <-->
+  <!-- css style for sliders -->
   <style>
     .slidecontainer {
       width: 100%;
@@ -59,7 +59,7 @@
       cursor: pointer;
     }
   </style>
-  <!--> css style for classes <-->
+  <!-- css style for classes -->
   <style>
     div.title {
     text-align: center;
@@ -82,7 +82,7 @@
   <div class="modifiers">
     
     <table align="center">
-<!--> sets up able to display buttons and sliders <-->
+<!-- sets up able to display buttons and sliders -->
       <tbody><tr>
         <td>Leaf Colour:</td>
         <td><input type="range" min="0" max="360" value="120" class="slider" id="colorSlider"></td>
@@ -108,7 +108,7 @@
         <form action="" id="radioFruit"></form>
           </div><table align="center">
       <tbody><tr>
-        <!--> radio button setup <-->
+        <!-- radio button setup -->
         <td><input type="radio" name="fruit" value="radioApple" id="apple"> Apple<br></td>
           <td><input type="radio" name="fruit" value="radioOrange" id="orange"> Orange<br></td>
           <td><input type="radio" name="fruit" value="radioLemon" id="lemon"> Lemon</td>
@@ -127,7 +127,7 @@
       </tr>
     </tbody></table>
    </div>  
-   <!--> object interactable event listeners <--> 
+   <!-- object interactable event listeners --> 
   <script>
     document.getElementById("btnRedraw").addEventListener("click", newTree);
 
